--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "concurrently \"vite\" \"json-server-auth -w db.json\"",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "json-server-auth -w db.json"
   },
   "dependencies": {
     "@headlessui/react": "^2.1.2",
